[package]
name = "rustpingpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustudpdk = { path = "../../rustudpdk" }
ctrlc = "3.2.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
